# er4-python

./: .gitignore  CMakeLists.txt  LICENSE  Readme.md  er4commlib.h  example.py  function_definitions.cpp  main.cpp  requirements.txt
.github/workflows/: build-and-release.yml  ping.yml
dlls/: e384CommLibPython.pyd  er4CommLib_python.pyd  lilPython.pyd
docs/: ADDING_PYTHON_VERSIONS.md  LOCAL_BUILD.md  PIPELINE_SETUP.md  PREFLIGHT.md  RUNNER_SETUP.md  SECURITY.md
images/: Thumbs.db
